--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mdx-metadata-extraction-experiments",
-    "description": "TODO",
+    "description": "Modern experiments to extract metadata from MDX files.",
     "version": "0.0.0",
     "author": {
         "name": "Michael Novotny",
